--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-test": "parcel build src/index.html --public-url=./ --no-minify --no-cache --no-source-maps --experimental-scope-hoisting",
     "build": "yarn clear && parcel build src/index.html --public-url=./ --experimental-scope-hoisting",
     "start": "parcel src/index.html --port=3000 --open",
-    "predeploy": "build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d dist"
   },
   "license": "MIT",
